--- a/web/elektron/views/index.html
+++ b/web/elektron/views/index.html
@@ -27,6 +27,9 @@
                       </ul>
                     </div>
                     <button ng-click="refreshConnection()" class="button-refresh btn btn-sm btn-positive"><i class="glyphicon glyphicon-refresh"></i></button>
+                    <button ng-click="pauseWebsocket()" ng-show="websocketplay == true" class="button-refresh btn btn-sm btn-positive"><i class="glyphicon glyphicon-pause"></i></button>
+                    <button ng-click="playWebsocket()" ng-show="websocketplay == false" class="button-refresh btn btn-sm btn-positive"><i class="glyphicon glyphicon-play"></i></button>
+
                     <button ng-show="websocketStatus == true" class="btn btn-sm btn-success">On</button>
                     <button ng-show="websocketStatus == false" class="btn btn-sm btn-danger">Off</button>
                 </panel-controls>
