--- a/web/elektron/assets/css/styles.css
+++ b/web/elektron/assets/css/styles.css
@@ -106,3 +106,30 @@
 .date-form {
   position: relative !important;
 }
+
+.spinner-container {
+  min-height: 200px;
+  margin-left: 45%;
+  margin-top: 14%;
+}
+
+.loader-spinner {
+  border: 7px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 7px solid #555;
+  width: 40px;
+  height: 40px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
