--- a/web/elektron/assets/css/styles.css
+++ b/web/elektron/assets/css/styles.css
@@ -129,6 +129,35 @@
   animation: spin 2s linear infinite;
 }
 
+.loader-spinner-small {
+  border: 4px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 4px solid #68a139;
+  width: 20px;
+  height: 20px;
+  -webkit-animation: spin 1s linear infinite; /* Safari */
+  animation: spin 1s linear infinite;
+}
+
+.button-spinner {
+  background-color: transparent !important;
+  border: none !important;
+  color: transparent !important;
+  border-color: transparent !important;
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
+}
+
+.button-spinner : hover {
+  background-color: transparent !important;
+  color: transparent !important;
+  border: none !important;
+  border-color: transparent !important;
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
+}
+
+
 /* Safari */
 @-webkit-keyframes spin {
   0% { -webkit-transform: rotate(0deg); }
